# aws-webapp-infra

./: .editorconfig  .gitignore  AWS-WEBAPP-INFRA.md  CHANGELOG.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  Makefile  Makefile.rust  QUICKSTART_RUST.md  README.md  USAGE.md  build-release.sh  cdk.context.template.json  cdk.json  eclipse-formatter.xml  pom.xml  sonar-project.properties
.github/: AI_CONTEXT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  dependency-management.yml  dependency-review.yml  publish-release.yml  pull-request-checks.yml  scheduled-maintenance.yml  template-validation.yml  test-and-analyze.yml
fn/: pom.xml
fn-rust/: .gitignore  Cargo.toml  README.md
fn-rust/lambdas/message/: Cargo.toml
fn-rust/lambdas/message/src/: main.rs
fn-rust/lambdas/message/test-events/: message.json
fn-rust/lambdas/post-confirmation/: Cargo.toml
fn-rust/lambdas/post-confirmation/src/: main.rs
fn-rust/lambdas/post-confirmation/test-events/: post-confirmation.json
fn-rust/lambdas/user/: Cargo.toml
fn-rust/lambdas/user/src/: main.rs
fn-rust/lambdas/user/test-events/: user.json
fn/api/: pom.xml
fn/api/user/: pom.xml
fn/api/user/src/main/java/ui/webapp/: DependencyFactory.java
fn/api/user/src/main/java/ui/webapp/execute/: Orchestrate.java
fn/api/user/src/main/resources/: log4j2.xml
fn/auth/: pom.xml
fn/auth/message/: pom.xml
fn/auth/message/src/main/java/ui/webapp/: Handler.java
fn/auth/message/src/main/java/ui/webapp/response/: ForgotPasswordResponse.java
fn/auth/post-confirmation/: pom.xml
fn/layer/api/: pom.xml
fn/layer/api/src/main/java/ui/webapp/: ApiDependencyFactory.java
fn/layer/auth/: pom.xml
fn/layer/auth/src/main/java/ui/webapp/: AuthDependencyFactory.java
fn/layer/shared/: pom.xml
fn/layer/shared/src/main/java/ui/webapp/: SharedDependencyFactory.java
infra/: cdk.json  pom.xml
infra/src/main/java/fasti/sh/webapp/: Launch.java
infra/src/main/java/fasti/sh/webapp/stack/: DeploymentConf.java  DeploymentStack.java  WebappReleaseConf.java  WebappStack.java
infra/src/main/java/fasti/sh/webapp/stack/model/: ApiConf.java  AuthConf.java  DbConf.java  SesConf.java
infra/src/main/java/fasti/sh/webapp/stack/nested/: ApiNestedStack.java  AuthNestedStack.java  DbNestedStack.java  SesNestedStack.java
infra/src/main/resources/production/v1/: conf.mustache  synthesizer.mustache
infra/src/main/resources/production/v1/api/: user.mustache
infra/src/main/resources/production/v1/auth/: ses.mustache  sns.mustache  triggers.mustache  userpool.mustache  userpoolclient.mustache
infra/src/main/resources/production/v1/policy/ses/: put-emails.mustache
infra/src/test/java/fasti/sh/webapp/: LaunchTest.java
infra/src/test/java/fasti/sh/webapp/stack/: DeploymentConfTest.java
infra/src/test/java/fasti/sh/webapp/stack/model/: ApiConfTest.java  AuthConfTest.java  DbConfTest.java  SesConfTest.java
infra/src/test/resources/: api-test.yaml  auth-test.yaml  db-test.yaml  ses-test.yaml
releases/: TEMPLATE.md
scripts/: destroy.sh  validate-templates.sh
scripts/smoke-test/: go.mod  go.sum  main.go
