[package]
name = "message"
version.workspace = true
edition.workspace = true

[dependencies]
# Lambda runtime
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }

# Shared libraries
lambda-common = { workspace = true }
lambda-observability = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }
